Basic of Angular

--- a/angular/src/app/app.html
+++ b/angular/src/app/app.html
@@ -1,3 +1,13 @@
+<app-navbar></app-navbar>
 <h2> Hello World</h2>
-{{title}}
-{{Count}}
+<div>{{title}}
+</div>
+<div>{{Count}}
+</div>
+<app-homepage></app-homepage>
+<app-profile></app-profile>
+<div>{{2+2}}</div>
+<div>{{name1==name2}}</div>
+<app-footer></app-footer>
+
+
