--- a/angular/src/app/footer/footer.html
+++ b/angular/src/app/footer/footer.html
@@ -1,1 +1,6 @@
 <h1>Footer</h1>
+<h2>{{count}}</h2>
+<div>
+<button (click)="handlePlus()"><p>Plus</p></button>
+<button (click)="handleMinus()"><p>Minus</p></button>
+</div>
