--- a/angular/src/app/homepage/homepage.css
+++ b/angular/src/app/homepage/homepage.css
@@ -7,3 +7,17 @@ h3{
   background-color: aqua;
   color:black;
 }
+button{
+  background-color:blueviolet;
+  color:yellow;
+  width: 200px;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: large;
+  word-spacing: 2px;
+  border: 2px solid red;
+  margin: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-variant: normal;
+}
+
