--- a/angular/src/app/homepage/homepage.html
+++ b/angular/src/app/homepage/homepage.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./homepage.css">
-  <title>Document</title>
-</head>
-<body>
-  <h3>Home Page Work</h3>
-</body>
-</html>
+<h3>Home Page Work</h3>
+<button (click)="handleClick()">Click Me</button>
+<button (click)="sum(10,20)">Sum</button>
