--- a/Day-2/src/app/app.html
+++ b/Day-2/src/app/app.html
@@ -1,2 +1,20 @@
-<h2>Hello</h2>
-{{name}}
+<app-nav></app-nav>
+<h2
+  class="w-full h-screen bg-gray-600 flex justify-center items-center font-serif"
+>
+  <p
+    class="
+      text-5xl font-bold
+      bg-gradient-to-r from-yellow-300 via-green-400 to-pink-300
+      bg-clip-text text-transparent
+    "
+  >
+    HOME PAGE
+  </p>
+</h2>
+
+<div class='grid grid-cols-3'>
+  <div class='bg-red-500 w-24 h-24'></div>
+  <div class='bg-yellow-500 w-24 h-24'></div>
+  <div class='bg-green-500 w-24 h-24'></div>
+</div>
