--- a/Day-3/src/app/app.html
+++ b/Day-3/src/app/app.html
@@ -1,3 +1,6 @@
+<div>
+  <app-profile></app-profile>
+</div>
 <button (click)='handleEvent($event)'>Click Me For Nothing</button>
 <br/>
 <div (mouseenter)='handleEvent($event)' class='green'>
