--- a/Day-3/src/app/app.html
+++ b/Day-3/src/app/app.html
@@ -1,5 +1,8 @@
 <div>
   <app-profile></app-profile>
+  <hr>
+  <app-color></app-color>
+  <hr>
 </div>
 <button (click)='handleEvent($event)'>Click Me For Nothing</button>
 <br/>
