--- a/Day-3/src/app/color/color.html
+++ b/Day-3/src/app/color/color.html
@@ -11,7 +11,7 @@
   } @else if(color===2){
   <div class="d d2"></div>
   } @else if(color===3){
-  <div class="d d3"></div>
+    <div></div>
   } @else{
   <div class="d d4"></div>
   }
