--- a/Day-4/SignalEffect/src/app/app.html
+++ b/Day-4/SignalEffect/src/app/app.html
@@ -1,5 +1,5 @@
 <h2>Signal Code</h2>
-{{count()}}
+{{ count() }}
 
-<button (click)='handleCount("inc")'>Increment</button>
-<button (click)='handleCount("dec")'>Decrement</button>
+<button (click)="handleCount('inc')">Increment</button>
+<button (click)="handleCount('dec')">Decrement</button>
