--- a/Day-5/src/app/app.html
+++ b/Day-5/src/app/app.html
@@ -5,8 +5,6 @@
 
 <button (click)='ChangeClick()'></button>
 
-
-
 <h1>{{count()}}</h1>
 @if(show){
 <div></div>
@@ -14,4 +12,12 @@
   <h2>Nothing</h2>
 }
 
+
 <button (click)='counter()'>Increase Counter</button>
+
+<hr>
+<app-cfor></app-cfor>
+
+<hr>
+
+<app-todo></app-todo>
