--- a/Day-62/src/app/app.html
+++ b/Day-62/src/app/app.html
@@ -4,4 +4,13 @@
     <li><a routerLink='/user/{{user.id}}/{{user.name}}'>{{user.name}}</a></li>
   }
 </ul>
+<a routerLink='/form'>CLICK ME TO GO FORM</a>
+<br>
+<a routerLink='/'>Back To  Users List</a>
+
+<br><br><br>
+<a routerLink='/formGroup'>CLICK ME TO GO FORM Group</a>
+<br>
+<a routerLink='/'>Back To  Users List</a>
 <router-outlet></router-outlet>
+
