--- a/Day-62/src/app/from-group/from-group.html
+++ b/Day-62/src/app/from-group/from-group.html
@@ -2,8 +2,12 @@
 <form [formGroup]="LoginForm" (ngSubmit)='submitForm()'>
   <br><br>
   <input type="text" placeholder="First Name" formControlName='firstName' />
+  <span  *ngIf="firstName?.hasError('required')">*</span>
   <br><br>
   <input type="text" placeholder="Last Name" formControlName="lastName" />
+  <span  *ngIf="lastName?.hasError('required')">*</span>
+  <span class='err'  *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)">Plz Enter Valid</span>
+
   <br><br>
   <button type="submit">Submit</button>
   <button type='button' (click)='setValue()'>Set Value</button>
