--- a/Day-62/src/app/app.html
+++ b/Day-62/src/app/app.html
@@ -11,6 +11,14 @@
 <br><br><br>
 <a routerLink='/formGroup'>CLICK ME TO GO FORM Group</a>
 <br>
+
 <a routerLink='/'>Back To  Users List</a>
+
+<br><br><br>
+<a routerLink='/temp'>Template Form</a>
+<br>
+<br>
+<a routerLink='/'>Back To  Users List</a>
+<hr>
 <router-outlet></router-outlet>
 
