--- a/Day-7/src/app/products/products.html
+++ b/Day-7/src/app/products/products.html
@@ -3,3 +3,8 @@
 @for(user of users;track user.name){
 <p>{{user.name}} - {{user.age}}</p>
 }
+
+
+<h2>Child To Parent</h2>
+
+<button (click)='sendproducts()'>Send Procuts to Parent</button>
