--- a/Day-7/src/app/app.html
+++ b/Day-7/src/app/app.html
@@ -1,3 +1,12 @@
 <h1>Home Page</h1>
 <a routerLink='/productList'>Product List</a>
 <router-outlet></router-outlet>
+<h2>{{title|uppercase}}</h2>
+<h2>{{date| date:"hh:mm:ss"}}</h2>
+<h2>{{num1 | currency:"INR"}}</h2>
+
+
+<h2>{{num2 | currencyConverter}}</h2>
+
+<h2>{{num2 | currencyConverter:1000}}</h2>
+
