--- a/Ecommerce/src/app/features/product-lisr/product-lisr.html
+++ b/Ecommerce/src/app/features/product-lisr/product-lisr.html
@@ -1,4 +1,7 @@
-<h1 class="text-2xl font-bold mb-4">Product List</h1>
+<h1 class=" text-center text-2xl font-bold mb-4">Product List</h1>
+<button class='ml-4 text-center px-4 py-2 bg-blue-500 text-white rounded' routerLink='/addProducts'>Add</button>
+
+
 
 @if (products().length === 0) {
   <p>No products available</p>
