--- a/Ecommerce/src/app/features/product-lisr/product/product.html
+++ b/Ecommerce/src/app/features/product-lisr/product/product.html
@@ -9,9 +9,9 @@
 
   <div class="flex items-center justify-between mb-4">
     <span class="text-3xl font-bold text-blue-600">
-      ${{product.price}}
+      {{product.price}}
     </span>
-    
+
     <span class="px-3 py-1 rounded-full text-sm font-semibold {{product.stock ? 'bg-green-100 text-green-800' : 'bg-red-100 text-red-800'}}">
       {{product.stock ? 'In Stock' : 'Out of Stock'}}
     </span>
