--- a/Ecommerce/src/styles.css
+++ b/Ecommerce/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+body{
+  background-color: rgb(189, 189, 189);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
