--- a/Day-7/src/app/app.html
+++ b/Day-7/src/app/app.html
@@ -9,4 +9,5 @@
 <h2>{{num2 | currencyConverter}}</h2>
 
 <h2>{{num2 | currencyConverter:1000}}</h2>
+<h2>{{num2 | currencyConverter:1000}}</h2><h2>{{num2 | currencyConverter:1000}}</h2><h2>{{num2 | currencyConverter:1000}}</h2>
 
